2003-03-18  Thomas Pfaff  <tpfaff@gmx.net>

	* pthread.cc (pthread_attr_init): Remove
	(pthread_attr_destroy): Ditto.
	(pthread_attr_setdetachstate): Ditto.
	(pthread_attr_getdetachstate): Ditto.
	(pthread_attr_setstacksize): Ditto.
	(pthread_attr_getstacksize): Ditto.
	(pthread_attr_setinheritsched): Ditto.
	(pthread_attr_getinheritsched): Ditto.
	(pthread_attr_setschedparam): Ditto.
	(pthread_attr_getschedparam): Ditto.
	(pthread_attr_setschedpolicy): Ditto.
	(pthread_attr_getschedpolicy): Ditto.
	(pthread_attr_setscope): Ditto.
	(pthread_attr_getscope): Ditto.
	(pthread_attr_setstackaddr): Ditto.
	(pthread_attr_getstackaddr): Ditto.
	(pthread_key_create): Ditto.
	(pthread_key_delete): Ditto.
	(pthread_setspecific): Ditto.
	(pthread_getspecific): Ditto.
	(pthread_kill): Ditto.
	(pthread_sigmask): Ditto.
	(pthread_equal): Ditto.
	(pthread_mutex_lock): Ditto.
	(pthread_mutex_trylock): Ditto.
	(pthread_mutex_unlock): Ditto.
	(pthread_mutex_destroy): Ditto.
	(pthread_mutex_setprioceiling): Ditto.
	(pthread_mutex_getprioceiling): Ditto.
	(pthread_mutexattr_destroy): Ditto.
	(pthread_mutexattr_getprioceiling): Ditto.
	(pthread_mutexattr_getprotocol): Ditto.
	(pthread_mutexattr_getpshared): Ditto.
	(pthread_mutexattr_gettype): Ditto.
	(pthread_mutexattr_init): Ditto.
	(pthread_mutexattr_setprioceiling): Ditto.
	(pthread_mutexattr_setprotocol): Ditto.
	(pthread_mutexattr_setpshared): Ditto.
	(pthread_mutexattr_settype): Ditto.
	(pthread_cond_destroy): Ditto.
	(pthread_cond_signal): Ditto.
	(pthread_cond_broadcast): Ditto.
	(pthread_condattr_init): Ditto.
	(pthread_condattr_destroy): Ditto.
	(pthread_condattr_getpshared): Ditto.
	(pthread_condattr_setpshared): Ditto.
	(pthread_rwlock_destroy): Ditto.
	(pthread_rwlock_rdlock): Ditto.
	(pthread_rwlock_tryrdlock): Ditto.
	(pthread_rwlock_wrlock): Ditto.
	(pthread_rwlock_trywrlock): Ditto.
	(pthread_rwlock_unlock): Ditto.
	(pthread_rwlockattr_init): Ditto.
	(pthread_rwlockattr_getpshared): Ditto.