@@ -81,6 +81,7 @@
 #include <windows.h>
 
 #include "perprocess.h"
+#include "cygwin/version.h"
 
 #ifdef __weak_alias
 #ifdef __LIBC12_SOURCE__
@@ -840,7 +841,7 @@ g_lstat(fn, sb, pglob)
 		struct __stat32 lsb;
 		int ret;
 
-		if (user_data->api_major > 0 || user_data->api_minor > 78)
+		if (CYGWIN_VERSION_CHECK_FOR_USING_BIG_TYPES)
 		  ret = (*pglob->gl_lstat)(buf, &sb);
 		else if (!(ret = (*pglob->gl_lstat)(buf, &lsb)))
 			stat32_to_STAT (&lsb, sb);
@@ -866,7 +867,7 @@ g_stat(fn, sb, pglob)
 		struct __stat32 lsb;
 		int ret;
 
-		if (user_data->api_major > 0 || user_data->api_minor > 78)
+		if (CYGWIN_VERSION_CHECK_FOR_USING_BIG_TYPES)
 		  ret = (*pglob->gl_stat)(buf, &sb);
 		if (!(ret = (*pglob->gl_stat)(buf, &lsb)))
 			stat32_to_STAT (&lsb, sb);
